added required JVM options for JDK17